Navigation: Remove Back-Button, fix breadcrumbs on mobile
Re #461

--- a/app/styles/components/_page-menu.scss
+++ b/app/styles/components/_page-menu.scss
@@ -110,19 +110,3 @@ ul.page-menu__lp-jump {
 		);
 	}
 } */
-
-.breadcrumbs {
-	* {
-		white-space: nowrap;
-	}
-
-	@include media-medium-max {
-		* {
-			display: none;
-		}
-
-		*:last-child {
-			display: inline;
-		}
-	}
-}
